--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "@expo/metro-runtime": "~6.1.1",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "expo-dev-client": "~6.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
