--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-webview": "13.15.0",
     "@expo/metro-runtime": "~6.1.1",
     "react-native-worklets": "0.5.1",
-    "expo-dev-client": "~6.0.12"
+    "expo-dev-client": "~6.0.12",
+    "expo-updates": "~29.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
